# videopp

./: .gitmodules  CMakeLists.txt  shaders.h
cmake-modules/: FindOpenGL.cmake
html/: html_container.h  html_context.cpp  html_context.h  html_font.h  html_page.cpp
html/uri/: uri.cpp  uri.h
tests/: CMakeLists.txt  main.cpp
tests/data/html/: Untitled 1.html  example.html  index.html
tests/data/html/simple_page/: index.html
tests/data/html/text/: fancy_drop_caps.html  font_families.html  font_sizes.html  graphical_drop_caps.html  pull_quotes1.html  pull_quotes2.html  pull_quotes3.html  simple_drop_caps.html  size_doesnt_matter.html  spacing_out_text.html  subscript_and_superscript.html  text_shadows.html  vertical_alignment.html
videopp/: CMakeLists.txt  color.cpp  color.h  context.h  draw_cmd.cpp  draw_cmd.h  draw_list.cpp  draw_list.h  flip_format.h  font.h  font_info.h  font_ptr.h  glyph_range.cpp  glyph_range.h  logger.cpp  logger.h  pixel_type.h  png_font.cpp  png_font.h  point.h  polyline.cpp  polyline.h  rect.h  renderer.cpp  renderer.h  rich_text.cpp  rich_text.h  shader.cpp  shader.h  shaders.h  size.h  surface.cpp  surface.h  text.cpp  text.h  texture.cpp  texture.h  ttf_font.cpp  ttf_font.h  utils.h  (+2 more)
videopp/detail/: context_egl.cpp  context_egl.h  context_glx.cpp  context_glx.h  context_wgl.cpp  context_wgl.h  glad.c  glad.h  png_loader.h  shaders.h  utils.h
videopp/detail/egl/: context_egl.cpp  context_egl.h  glad_egl.c  glad_egl.h
videopp/detail/glx/: context_glx.cpp  context_glx.h  glad_glx.c  glad_glx.h
videopp/detail/png/: png_loader_impl.cpp
videopp/detail/stb/: png_loader_impl.cpp
videopp/detail/wgl/: context_wgl.cpp  context_wgl.h  glad_wgl.c  glad_wgl.h
videopp/glad/: glad_egl.h  glad_glx.h
videopp/html/: html_container.cpp  html_container.h  html_context.cpp  html_context.h  html_font.cpp  html_font.h  html_page.cpp  html_page.h
videopp/html/uri/: uri.cpp  uri.h
videopp/math/: glm_includes.h  transform.hpp
videopp/rich_text/: csscolorparser.cpp  csscolorparser.hpp  html_parser.hpp  rich_text.cpp  rich_text.h
